--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.world_time">
    <application
-        android:label="world_time"
+        android:label="Weltzeituhr"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
